--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.1.1 (2016-07-27)
+--------------------------
+Allow organisations in Iglu schema URIs to contain hyphens (#12)
+
 Version 0.1.0 (2016-03-22)
 --------------------------
 Initial release
