--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,20 @@
+Version 0.2.0 (2017-05-23)
+--------------------------
+Bump SBT to 0.13.15 (#32)
+Bump specs2 to 3.8.9 (#33)
+Add support for checking and setting a DynamoDB-backed run manifest (#31)
+Add transformWithInventory to the JSON EventTransformer (#34)
+JSON Event Transformer: don't add null unstruct_event and contexts fields to output (#11)
+Replace Scalaz Validation with Scala Either (#20)
+Use standard regular expression for schema URIs (#22)
+Allow empty custom contexts (#27)
+Add CI/CD to project (#18)
+Add Sonatype credentials to .travis.yml (#39)
+Add Bintray credentials to .travis.yml (#17)
+Update README markdown in according with CommonMark (#28)
+Migrate setup guide from README to dedicated snowplow/snowplow wiki page (#29)
+Migrate usage guide from README to dedicated snowplow/snowplow wiki page (#30)
+
 Version 0.1.1 (2016-07-27)
 --------------------------
 Allow organisations in Iglu schema URIs to contain hyphens (#12)
