--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.2.1 (2017-11-20)
+--------------------------
+Fix non-merging matching contexts (#44)
+
 Version 0.2.0 (2017-05-24)
 --------------------------
 Bump SBT to 0.13.15 (#32)
