--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.3.1 (2018-07-24)
+--------------------------
+Add option to not flatten self-describing fields (#56)
+
 Version 0.3.0 (2018-03-06)
 --------------------------
 Add Scala 2.12 support (#41)
