--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 2.0.1 (2020-06-10)
+--------------------------
+Fix Travis publish condition (#105)
+
 Version 2.0.0 (2020-06-09)
 --------------------------
 Remove run manifest (#102)
